zebra-state/src/service/finalized_state/disk_format/tests/snapshots/commitment_roots_by_height_raw_data@testnet_0.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "000000",
    v: "fbc2f4300c01f0b7820d00e3347c8da4ee614674376cbc45359daa54f9b5493eae2935f1dfd8a24aed7c70df7de3a668eb7a49b1319880dde2bbd9031ae5d82f",
  ),
]
